--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "jimp": "^0.22.12",
     "js-yaml": "^4.1.0",
+    "sharp": "^0.33.4",
     "showdown": "^2.1.0",
     "ytdl-core": "^4.11.5"
   }
